Fixed a css bug on content : only vertical overflow is allowed

--- a/src/app/core/sass/core.scss
+++ b/src/app/core/sass/core.scss
@@ -96,14 +96,13 @@ li{
 [data-role=content] {
 	padding: 0px;
 	@include transition(top .2s);
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 
 	// &.fixed {
 		position: absolute;
 		top: $headerHeight;
 		bottom: 0; left: 0; right: 0;
-		overflow: scroll;
-		// -webkit-backface-visibility: hidden;
-		-webkit-overflow-scrolling: touch;
 	// }
 
 	&.mini {
